# Bluetab_assesment

./: README.md  assesment.ipynb  main.py  pyproject.toml
